@@ -5,6 +5,7 @@ Changelog:
 	Updated OS X MPlayer to enable external VOBsub support
 	allow update checks to be performed manually (Windows only)
 	allow automatic update checks to be enabled (Windows only)
+	simplify PMS customization for packagers of custom builds
 
 2011-07-06 - 1.30.1
 
